test/corpus/L1/negative/unexpected-token-return.st
"---
kind: negative
section: error.unexpected-token
codes: E_UNEXPECTED_TOKEN
note: caret return operator used at statement level outside a method body
---"
^1. 2
